Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-

* Version 2.10 (unreleased)

** Add ykclient_global_init and ykclient_global_done.

* Version 2.9 (released 2012-08-07)

** Compability with curl versions before 7.20.

** Fix signature checking on ARM (at least).

* Version 2.8 (released 2012-06-15)

** ykclient: Add C++ namespace protection.

** Add multi-server support with curl_multi.
   Enabled by default for YubiCloud servers.
   Settable with the new library function set_template_urls() or
   the urls parameter to ykclient_verify_otp_v2().

** Remove extra % in ykclient help.

** Add ca path option to ykclient, --ca.
   Patch from Jay Kline <jay.kline.ctr@hpcmo.hpc.mil>.

** Make the nonce unique for consecutive calls to the same ykclient handle.

** Do url encoding of OTP before sending.

** Fix segfault on curl error.
   Patch from Lee Hinman <lee.hinman.ctr@hpc.mil>

* Version 2.7 (released 2011-11-23)

** Verify server signatures per default when a key is provided. The old
behavior can be restored with ykclient_set_verify_signature (ykc, 0);
Reported by Dominic Rutherford <dominic@rutherfordfamily.co.uk>.

** Return YKCLIENT_BAD_SERVER_SIGNATURE on missing signature.

* Version 2.6 (released 2011-06-06)

** Use fprintf+exit instead of glibc-ism errx.
Reported by Jussi Sallinen <jussi@jus.si>.

** Indent code and replace // comments with /* */ comments (for C89).

** Fix dates of releases for 2.4 and 2.5 below (2011 not 2010).

* Version 2.5 (released 2011-05-31)

** Implement almost all of Validation protocol 2.0.
The part still known to be missing is parallell querys to all validation
servers using curl-multi. Includes significant patches by
Sebastien Martini <seb@dbzteam.org> and qistoph@gmail.com.

* Version 2.4 (released 2011-03-02)

** Add possibility to supply validation service URL.
Patch by Remi Mollon <remi.mollon@cern.ch>.

** Make Validation protocol 2.0 servers not reject our requests.