@@ -37,6 +37,7 @@
 #include <string.h>
 
 #include <ykclient_errors.h>
+#include <ykclient_version.h>
 
 # ifdef __cplusplus
 extern "C"
